# openGL2openXR

./: .gitignore  CMakeLists.txt  GLSLShader.cpp  GLSLShader.h  README.md  main.h  openxrOptix.cpp  openxrOptix.h  simple.fragment.glsl  simple.fs  simple.vertex.glsl  simple.vs
